--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@
   --partlogo-text-color-footer: #ffffff;
   --hero-text-color: #ffffff;
   --addresse-text-color: #ffffff;
-  --footer-contacts-text-color: rgba(255, 255, 255, 0.6);
+  --footer-text-color: rgba(255, 255, 255, 0.6);
   --accent-text-color: #ffffff;
   --primary-bg-color: #e5e5e5;
   --secondary-bg-color: #2f303a;
@@ -154,13 +154,16 @@ img {
   text-align: center;
 }
 .hero-button,
+.footer-email-form-btn,
 .button:hover,
 .button:focus {
   background-color: var(--accent-color);
   color: var(--accent-text-color);
 }
 .hero-button:hover,
-.hero-button:focus {
+.hero-button:focus,
+.footer-email-form-btn:hover,
+.footer-email-form-btn:focus,
   background-color: var(--accent-hero-btn-bg-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
@@ -177,11 +180,32 @@ img {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.footer-email-form-btn {
+  position: relative;
+  padding: 8px 60px 8px 27px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+}
+}
+
+/* Переход */
+
 .transitions {
-  transition-property: color, background-color, box-shadow, border-color, transform;
+  transition-property: color, background-color, box-shadow, border-color, transform, fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* Сброс для форм */
+
+.form-reset-input {
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
 /* -----Стили главной страницы----- */
 
 /* Header */
@@ -484,10 +508,11 @@ img {
   color: var(--addresse-text-color);
 }
 .footer-contact {
-  color: var(--footer-contacts-text-color);
+  color: var(--footer-text-color);
 }
 .footer-social {
   min-width: 206px;
+  margin-right: 93px;
 }
 .footer-social-title {
   font-weight: 700;
@@ -517,6 +542,43 @@ img {
 .footer-social-icon:hover,
 .footer-social-icon:focus {
   background-color: var(--accent-icon-bg-color);
+}
+.footer-email-form-text {
+  display: block;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--accent-text-color);
+  margin-bottom: 20px;
+}
+.footer-email-form-input {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  padding: 15px 16px;
+  width: 358px;
+  height: 50px;
+  color: var(--footer-text-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  margin-right: 12px;
+}
+.footer-email-form-input:valid:not(:placeholder-shown) {
+  border: 1px solid #00ff00;
+}
+.footer-email-form-input:invalid {
+  border: 1px solid #ff0000;
+}
+.footer-email-form-input:focus:placeholder-shown {
+  border: 1px solid var(--accent-color);
+}
+.footer-email-form-icon {
+  position: absolute;
+  top: 50%;
+  right: 28px;
+  transform: translateY(-50%);
 }
 
 /* -----Модальное окно----- */
