--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,7 @@ img {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+  margin-top: 30px;
 }
 
 /* Переход */
@@ -636,6 +637,9 @@ img {
 .form-field + .form-field {
   margin-top: 28px;
 }
+.form-field-textarea {
+  margin-bottom: 20px;
+}
 .form-field-name {
   position: absolute;
   top: -4px;
@@ -676,7 +680,6 @@ img {
   resize: none;
   height: 96px;
   padding: 12px 14px;
-  margin-bottom: 20px;
 }
 .form-textarea:placeholder-shown {
   font-size: 12px;
@@ -691,7 +694,6 @@ img {
   font-size: 14px;
   line-height: 1.71;
   color: var(--secondary-text-color);
-  margin-bottom: 30px;
 }
 .castom-check {
   width: 16px;
